--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="50dp"
     android:background="@drawable/gradient"
-    tools:context=".MainActivity">
+    tools:context=".view.MainActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -18,19 +17,21 @@
             android:id="@+id/et_palabra1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:ems="10"
-            android:padding="5dp"
             android:background="@color/white_grey"
+            android:ems="10"
+            android:hint="@string/hint_palabra"
 
             android:inputType="text"
-            android:hint="@string/hint_palabra" />
+            android:minHeight="48dp"
+            android:padding="5dp"
+            tools:ignore="VisualLintTextFieldSize" />
 
         <TextView
             android:id="@+id/text_vs"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:padding="10dp"
+            android:padding="14dp"
             android:textSize="16sp"
             android:textStyle="bold"
             android:text="@string/vs" />
@@ -39,12 +40,14 @@
             android:id="@+id/et_palabra2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:ems="10"
-            android:padding="5dp"
             android:background="@color/white_grey"
+            android:ems="10"
+            android:hint="@string/hint_palabra"
 
             android:inputType="text"
-            android:hint="@string/hint_palabra" />
+            android:minHeight="48dp"
+            android:padding="5dp"
+            tools:ignore="VisualLintTextFieldSize" />
 
         <Button
             android:id="@+id/btn_comparar"
@@ -53,7 +56,9 @@
             android:layout_margin="30dp"
             android:backgroundTint="@color/end_color"
             android:shadowColor="@color/black"
-            android:text="@string/btn_comparar" />
+            android:text="@string/btn_comparar"
+            android:textColor="@color/contrast_btn"
+            tools:ignore="VisualLintButtonSize" />
 
         <TextView
             android:id="@+id/text_sonIguales"
